src/main/java/org/example/interpreter/error/NoSuchFunctionInterpretingException.java
package org.example.interpreter.error;public class NoSuchFunctionInterpretingException {
}
